@@ -1,4 +1,8 @@
 SUBDIRS = src
+EXTRA_DIST = gtk-splitter.spec    \
+             gtk-splitter.desktop \
+             gtk-splitter.png     \
+             HOSTS                
 
 gnome_menudir=$(prefix)/share/gnome/apps/Utilities
 gnome_menu_DATA=gtk-splitter.desktop
