@@ -9,6 +9,6 @@
 [X]Verify the necessity of includes.
 [ ]Use the -DPACKAGE and -DVERSION macros inside the source.
 [ ]Modify the configure stuff to check for gnome before installing the menu shortcut and icon.
-[ ]Create scripts for building an RPM.
+[X]Create scripts for building an RPM.
 [ ]Add support for md5sum.
 [ ]Utilize the new stuff in GTK+ 2.0!
