@@ -1,3 +1,3 @@
 aclocal
 autoconf
-automake
+automake --add-missing
