@@ -1,5 +1,5 @@
 make clean
-rm -f config.status config.cache config.log configure Makefile.in Makefile aclocal.m4 confdefs.h
+rm -f config.status config.cache config.log configure Makefile.in Makefile aclocal.m4 confdefs.h gtk-splitter.spec
 rm -f src/Makefile.in
 rm -f src/Makefile
 rm -fr src/.deps
