@@ -1,4 +1,12 @@
+2002-08-09  gunter  <techgunter@yahoo.com>
+
+	* Makefile.am, autogen.sh, configure.in, clean.sh, src/Makefile.am, gtk-splitter.spec.in:
+ 	Added gtk-splitter.spec.in and made adjustments to the configure scripts to create and rpm
+        of gtk-splitter.  These changes were supplied to me by Panagiotis Vossos <jacbre@internet.gr>. 
+	Many thanks Panagiotis!
+
 2002-08-06  gunter  <techgunter@yahoo.com>
+
 	* src/Makefile.am
 	Added '-lglib' flag to fix a compilation error on Solaris 8 (and maybe others).
 	Thanks to Emmanuel Halbwachs for the report.
